# JoyReBot

./: .gitignore  README.md
assets/: analysis_and_qa.md
joyrebot_gazebo_sim/: package.xml
joyrebot_gazebo_sim/config/: bridge.yaml
joyrebot_gazebo_sim/launch/: sim.launch.py
joyrebot_gazebo_sim/urdf/: rebot_b601_rs.urdf
joyrebot_gazebo_sim/worlds/: rebot_b601.sdf
src/joyrebot_gazebo_sim/: CMakeLists.txt
src/joyrebot_gazebo_sim/include/: joint_self_check.hpp
src/joyrebot_gazebo_sim/src/: joint_self_check.cpp  test_joints.cpp
src/joyrebot_gazebo_sim/test/: test_model.py
src/joyrebot_gazebo_sim/urdf/: rebot_b601_rs.urdf
src/joyrebot_gazebo_sim/worlds/: rebot_b601.sdf
src/joyrebot_joint_teleop/: README.md  package.xml  setup.cfg  setup.py
src/joyrebot_joint_teleop/config/: joint_teleop.yaml
src/joyrebot_joint_teleop/joyrebot_joint_teleop/: anthropomorphic.py  device_input.py  joint_data_logger.py  joint_display.py  joint_teleop_node.py  joycon_session.py
src/joyrebot_joint_teleop/launch/: joint_teleop.launch.py
src/joyrebot_joint_teleop/test/: test_anthropomorphic.py  test_device_input.py  test_display.py  test_joint_data_logger.py  test_joycon_session.py
src/joyrebot_teleop/: IMU_PROCESSING_COMPARISON.md  README.md  THIRD_PARTY_NOTICES.md  package.xml  setup.cfg  setup.py
src/joyrebot_teleop/config/: rebot_b601_kinematics.urdf  teleop.yaml
src/joyrebot_teleop/joyrebot_teleop/: __init__.py  axis_calibration.py  axis_calibration_node.py  joycon_input_node.py  kinematics.py  mock_input_node.py  placo_solver.py  pose_mapping.py  teleop_controller.py  terminal_display.py
src/joyrebot_teleop/launch/: axis_calibration.launch.py  sim_teleop.launch.py  teleop.launch.py
src/joyrebot_teleop/test/: test_attitude_filter.py  test_axis_calibration.py  test_joycon_translation.py  test_kinematics.py  test_placo_solver.py  test_pose_mapping.py  test_terminal_display.py
