<?xml version="1.0"?>
<package format="3">
  <name>joyrebot_gazebo_sim</name>
  <version>0.1.0</version>
  <description>Gazebo Harmonic (gz-sim 8) simulation assets for the reBot B601-RS arm.</description>
  <maintainer email="maintainer@example.com">JoyReBot maintainers</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
