<?xml version="1.0"?>
<package format="3">
  <name>joyrebot_teleop</name>
  <version>0.1.0</version>
  <description>Safe Cartesian Joy-Con teleoperation for the reBot B601-RS arm.</description>
  <maintainer email="maintainer@example.com">JoyReBot maintainers</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>joyrebot_gazebo_sim</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <!-- pip names: hidapi and PyGLM; setup.py installs them when needed. -->
  <test_depend>python3-pytest</test_depend>

  <export><build_type>ament_python</build_type></export>
</package>
